--- a/style.css
+++ b/style.css
@@ -5,5 +5,56 @@ html, body{
 }
 
 #main{
+  margin: 15% auto;
+  width: 50%;
+}
+input{
+width:70%;
+height:30px;
+padding-left:5px;
+margin: 5% auto;
+display: block;
+}
+.streamer{
+  padding: 7px;
+  border: black 3px solid;
+  height: 75px;
+  margin-top:-2px;
+  margin-bottom:-2px;
+  clear:left;
+}
+
+img {
+  width: 75px;
+  height: 75px;
+  border: black 3px solid;
+  border-radius: 25px;
+  float: left;
+}
+.display-name, .display-status {
+  display:block;
+
+
+}
+.display-name{
+  font-weight: bold;
+  float:left;
+
+}
+.display-status{
+  font-style: italic;
+  clear:both;
+}
+
+i {
+  text-align: center;
+  color:green;
+  border: green 3px solid;
+  width:20px;
+  height:20px;
   margin: 0 auto;
+  display:block;
+  float: right;
+
+
 }
