--- a/style.css
+++ b/style.css
@@ -1,27 +1,29 @@
-html, body{
-  padding:0;
+html, body {
+  padding: 0;
   margin: 0;
   height: 100%;
 }
 
-#main{
+#main {
   margin: 15% auto;
   width: 50%;
 }
-input{
-width:70%;
-height:30px;
-padding-left:5px;
-margin: 5% auto;
-display: block;
+
+input {
+  width: 70%;
+  height: 30px;
+  padding-left: 5px;
+  margin: 5% auto;
+  display: block;
 }
-.streamer{
+
+.streamer {
   padding: 7px;
   border: black 3px solid;
   height: 75px;
-  margin-top:-2px;
-  margin-bottom:-2px;
-  clear:left;
+  margin-top: -2px;
+  margin-bottom: -2px;
+
 }
 
 img {
@@ -29,32 +31,49 @@ img {
   height: 75px;
   border: black 3px solid;
   border-radius: 25px;
-  float: left;
+  display: block;
+  float:left
+
+}
+span{
+    word-wrap: break-word
 }
 .display-name, .display-status {
-  display:block;
+  display: inline-block;
 
-
-}
-.display-name{
-  font-weight: bold;
   float:left;
+  padding-left: 5px;
+}
+
+.display-name {
+  font-weight: bold;
 
 }
-.display-status{
+
+.display-status {
   font-style: italic;
-  clear:both;
+
 }
 
 i {
   text-align: center;
-  color:green;
-  border: green 3px solid;
-  width:20px;
-  height:20px;
+  border: black 3px solid;
+  width: 20px;
+  height: 20px;
   margin: 0 auto;
-  display:block;
-  float: right;
+  float:right;
 
+}
 
+.tab-bar .tab-bar-item {
+  margin-bottom: 5%;
+  padding: 8px 16px;
+  float: left;
+  width: 33%;
+  border: none;
+
+}
+
+button.tab-bar-item.tab-active{
+  background-color: red;
 }
